# sliding-puzzle

./: CMakeLists.txt  README.md  SlidingPuzzle.cbp  SlidingPuzzle.depend  cpplint.cfg  cpplint.py  cpplint.sh
cmake/: FindSFML.cmake
doc/cccc/: App.html  App.xml  Component.html  Component.xml  Config.html  Config.xml  CoordinateConverter.html  CoordinateConverter.xml  Creator.html  Creator.xml  Event.html  Event.xml  EventHandler.html  EventHandler.xml  ExitHandler.html  ExitHandler.xml  ExitListener.html  ExitListener.xml  FullscreenHandler.html  FullscreenHandler.xml  FullscreenListener.html  FullscreenListener.xml  Game.html  Game.xml  IDAStar.html  IDAStar.xml  Image.html  Image.xml  LoadException.html  LoadException.xml  Matrix.html  Matrix.xml  MinDistance.html  MinDistance.xml  Move.html  Move.xml  Playback.html  Playback.xml  Randomizer.html  Randomizer.xml  (+52 more)
include/sliding_puzzle/: app.h  component.h  coordinate_converter.h  move.h  pair.h  randomizer.h  sliding_puzzle.h  solver.h  state.h  unused.h  window.h
include/sliding_puzzle/component/: exit_listener.h  fullscreen_listener.h  game.h  image.h  matrix.h  shuffleable_game.h  solvable_game.h  square_image.h
include/sliding_puzzle/randomizer/: min_distance.h
include/sliding_puzzle/solver/: idastar.h  playback.h
src/: main.cc
